--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     testCompile "org.testfx:testfx-core:4.0.+"
     testCompile "org.testfx:testfx-junit:4.0.+"
+    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.6.10'
 }
 
 apply plugin: 'application'
