패키지 이름 변경 : main -> SimpleMerge

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 
 apply plugin: 'application'
 
-mainClassName = "main.Main"
+mainClassName = "SimpleMerge.Main"
 
 apply plugin: 'idea'
 
