컴파일 옵션 추가
인코딩, Lint, incremental 옵션 추가

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ mainClassName = "SimpleMerge.Main"
 
 apply plugin: 'idea'
 
+compileJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    options.incremental = true
+}
+
 /*
 // Jemmy Test
 def jemmy = '../jemmy/tools/Jemmy/JemmyFX'
