add list options when compile test

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,14 @@ dependencies {
 }
 
 compileJava {
+    options.fork = true
+    options.encoding = 'UTF-8'
+    options.compilerArgs << "-Xlint"
+    options.incremental = true
+}
+
+compileTestJava {
+    options.fork = true
     options.encoding = 'UTF-8'
     options.compilerArgs << "-Xlint"
     options.incremental = true
